group procs of the same name in TOC

--- a/config/nimdoc.cfg
+++ b/config/nimdoc.cfg
@@ -24,6 +24,12 @@ doc.section.toc = """
 </li>
 """
 
+doc.section.toc2 = """
+  <ul class="simple nested-toc-section">$plainName
+    $content
+  </ul>
+"""
+
 # Chunk of HTML emitted for each entry in the HTML table of contents.
 # Available variables are:
 # * $desc: the actual docstring of the item.
@@ -53,6 +59,14 @@ doc.item.toc = """
   <li><a class="reference" href="#$itemSymOrIDEnc"
     title="$header_plain">$name<span class="attachedType">$attype</span></a></li>
 """
+
+# This is used for TOC items which are grouped by the same name (e.g. procs).
+doc.item.tocTable = """
+  <li><a class="reference" href="#$itemSymOrIDEnc"
+    title="$header_plain">$itemSymOrID<span class="attachedType">$attype</span></a></li>
+"""
+
+
 
 # HTML rendered for doc.item's seeSrc variable. Note that this will render to
 # the empty string if you don't pass anything through --git.url. Available
